# hermes

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  docker-dependency.yml  requirements.txt
.github/workflows/: ci.yml
config/: test.yaml
crates/auth-service/: Cargo.toml  README.md
crates/auth-service/src/: main.rs
crates/channel-service/: Cargo.toml  README.md
crates/channel-service/src/: main.rs
crates/chat-service/: Cargo.toml  README.md
crates/chat-service/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: cache.rs  config.rs  db.rs  error.rs  errors.rs  events.rs  jwt.rs  lib.rs  message_queue.rs  models.rs
crates/common/src/config/: mod.rs
crates/common/src/events/: mod.rs
crates/common/src/models/: dto.rs  location.rs  mod.rs  route.rs  user.rs  vehicle.rs
crates/common/src/utils/: mod.rs
crates/gateway/: Cargo.toml
crates/gateway-service/: Cargo.toml  README.md
crates/gateway-service/src/: main.rs
crates/location-processor/: Cargo.toml
crates/media-server/: Cargo.toml  README.md
crates/media-server/src/: main.rs
crates/presence-service/: Cargo.toml  README.md
crates/presence-service/src/: main.rs
crates/simulation/: Cargo.toml
crates/stream-service/: Cargo.toml  README.md
crates/stream-service/src/: main.rs
crates/udp-ingestor/: Cargo.toml
crates/user-service/: Cargo.toml  README.md
crates/user-service/src/: main.rs
crates/voice-service/: Cargo.toml  README.md
crates/voice-service/src/: main.rs
docs/: DEVELOPMENT.md
infra/coturn/: turnserver.conf
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
migrations/: 20250402070424_create_auth_users_table.up.sql
scripts/: verify-setup.sh
services/auth-service/: Cargo.toml
services/gateway/: Cargo.toml
services/location-processor/: Cargo.toml
services/simulation/: Cargo.toml
services/udp-ingestor/: Cargo.toml
services/udp-ingestor/src/: main.rs
src/: app.rs  main.rs
src/auth/: dto.rs  mod.rs  queries.rs  routes.rs  usecase.rs
src/auth/domain/: error.rs  model.rs  repository.rs  service.rs
src/common/: error.rs  mod.rs
src/common/config/: config.rs  db.rs  environment.rs  logger.rs  mod.rs
src/common/data/: base64.rs  date.rs  hash.rs  mod.rs
src/common/logger/: mod.rs
src/user/: mod.rs  queries.rs
src/user/domain/: error.rs  model.rs  repository.rs  service.rs
