[workspace]
resolver = "2"
members = [
  "crates/common",
  "services/auth-service",
  "services/location-processor",
  "services/udp-ingestor",
  "services/gateway",
  "services/simulation",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bulut Gocer <gocerbulutcan@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }

# Cache
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# Event bus
async-nats = "0.44"

# Auth
jsonwebtoken = "10"
bcrypt = "0.17"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# Testing
mockall = { version = "0.13" }
rand = "0.9"

# Async trait
async-trait = "0.1"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 0
debug = true
