[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/auth-service",
    "crates/user-service",
    "crates/channel-service",
    "crates/chat-service",
    "crates/voice-service",
    "crates/stream-service",
    "crates/presence-service",
    "crates/gateway-service",
    "crates/media-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/discord-clone"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web Framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Message Queue
async-nats = "0.33"

# WebRTC
webrtc = "0.9"

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"

# UUID & Time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Tracing & Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Environment
dotenvy = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }
