[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true, optional = true }
redis = { workspace = true, optional = true }

[features]
default = []
db = ["sqlx"]
cache = ["redis"]
