[package]
name = "stream-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "stream-service"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
async-nats.workspace = true
webrtc.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
validator.workspace = true
