[package]
name = "user-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "user-service"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }

# Async Runtime
tokio.workspace = true

# Web Framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true
redis.workspace = true

# Message Queue
async-nats.workspace = true

# UUID & Time
uuid.workspace = true
chrono.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Error Handling
anyhow.workspace = true
thiserror.workspace = true

# Environment
dotenvy.workspace = true

# Validation
validator.workspace = true

# HTTP Client
reqwest.workspace = true
